bisogna sistemare un pò di cose
